# ICN

./: .clippy.toml  .env.template  .gitattributes  .gitignore  .icn_services  .percy.yml  CONTRIBUTING.md  Cargo.toml  DSL_ICN.txt  Dockerfile.test  ICN.code-workspace  Makefile  MyNewFile.ts  README.md  build-and-run.sh  check_icn_status.sh  codecov.yml  create_docs_dump.sh  debug_start.sh  dev-monitor.sh  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  fraudDetection.ts  generate_code_dump.sh  h -u origin testing-curser  improved-setup.sh  inventory_nodes.sh  overview-generator.sh  package-lock.json  package.json  poc-zk-snarks-overview.md  project_code_00_overview.txt  project_code_01_config.txt  project_code_02_backend.txt  project_code_03_frontend.txt  project_code_04_contracts.txt  project_code_05_identity.txt  project_code_06_governance.txt  project_code_07_consensus.txt  (+30 more)
backend/: Cargo.toml  lib.rs  lib.rs,old
backend/.github/workflows/: ci.yml
backend/benches/: governance_benchmarks.rs
backend/db/: icn.db
backend/examples/: blockchain_test.rs  ws_client.rs  ws_client2.rs
backend/migrations/: 20240218000000_initial.sql  20240301000000_add_optimized_indexes.sql  20240311_initial_schema.sql
backend/migrations/test/: init.sql
backend/scripts/: setup_postgres.sh
backend/src/: api.rs  blockchain.rs  core.rs  database.rs  db.rs  federation.rs  governance.rs  identity.rs  lib.rs  main.rs  models.rs  networking.rs  notification.rs  reputation.rs  resources.rs  routes.rs  services.rs  storage.rs  test_config.rs  test_macros.rs  test_utils.rs  vm.rs
backend/src/api/: cooperative.rs  error.rs  federation.rs  federation_resource_sharing.rs  governance.rs  handlers.rs  health.rs  identity.rs  mod.rs  network.rs  reputation.rs  resource.rs  resources.rs  routes.rs
backend/src/api/handlers/: federation_handlers.rs  identity_handlers.rs
backend/src/blockchain/: block.rs  blockchain.rs.bak  chain.rs  mod.rs  transaction.rs
backend/src/claims/: mod.rs
backend/src/community/: mod.rs
backend/src/consensus/: mod.rs  proof_of_cooperation.rs  tests.rs  types.rs
backend/src/consensus/proof_of_cooperation/: core.rs  event.rs  events.rs  metrics.rs  mod.rs  round.rs  (+1 more)
backend/src/cooperative/: mod.rs
backend/src/core/: consensus.rs  ledger.rs
backend/src/database/: db.rs  migrations.rs  models.rs  queries.rs
backend/src/db/: indexing.rs
backend/src/governance/: mod.rs  proposal.rs
backend/src/identity/: authentication.rs  did.rs  identity_manager.rs  identity_system.rs  key_pair.rs  mod.rs
backend/src/middleware/: auth.rs  cors.rs  mod.rs  rate_limit.rs
backend/src/monitoring/: energy.rs  mod.rs
backend/src/network/: mod.rs
backend/src/networking/: p2p.rs  rpc.rs  websocket.rs
backend/src/relationship/: mod.rs  system.rs  types.rs
backend/src/reputation/: mod.rs  reputation_system.rs
backend/src/services/: federation_service.rs  governance.rs  governance_service.rs  identity_service.rs  node.rs  reputation_service.rs  storage_service.rs
backend/src/state/: merkle_tree.rs  mod.rs
backend/src/storage/: integration_tests.rs  mod.rs  postgres.rs
backend/src/utils/: mod.rs  notifications.rs
backend/src/vm/: cooperative_metadata.rs  event.rs  mod.rs  opcode.rs  vm.rs
backend/src/websocket/: handler.rs  mod.rs
backend/tests/: e2e_tests.rs  federation_manager_tests.rs  federation_sdp_tests.rs  governance_integration_test.rs  integration_test.rs  property_tests.rs
crates/icn-common/: Cargo.toml
crates/icn-common/src/: lib.rs
crates/icn-consensus/: Cargo.toml  README.md
crates/icn-consensus/src/: config.rs  crypto.rs  error.rs  federation.rs  governance.rs  lib.rs  metrics.rs  mod.rs  pbft.rs  proof_of_cooperation.rs  round_management.rs  sharding.rs  state.rs  timeout_handling.rs  types.rs  validation.rs
crates/icn-consensus/tests/: proof_of_cooperation_test.rs
crates/icn-core/: Cargo.toml  config.rs  error.rs  metrics.rs  shutdown.rs  state.rs  telemetry.rs
crates/icn-core/examples/: integration_test.rs  ws_client.rs  ws_client2.rs
crates/icn-core/src/: did_registry.rs  genesis.rs  governance.rs  lib.rs  main.rs  storage.rs  transactions.rs  verifiable_credentials.rs  vm.rs
crates/icn-core/tests/: consensus_integration_test.rs  integration_test.rs
crates/icn-crypto/: Cargo.toml
crates/icn-crypto/src/: lib.rs
crates/icn-federation/: Cargo.toml
crates/icn-federation/src/: cross_federation.rs  dispute.rs  federation.rs  governance.rs  lib.rs  messaging.rs  resource_manager.rs  resource_sharing.rs  treasury.rs
crates/icn-federation/tests/: federation_integration_test.rs
crates/icn-p2p/: Cargo.toml
crates/icn-p2p/src/: lib.rs  networking.rs  protocol.rs  sdp.rs  websocket.rs
crates/icn-runtime/: Cargo.toml
crates/icn-runtime/src/: contract.rs  execution_context.rs  executor.rs  lib.rs  mod.rs
crates/icn-storage/: Cargo.toml
crates/icn-storage/migrations/: 001_initial_schema.down.sql  001_initial_schema.sql  20241207000000_initial_schema.sql  20241207233429_initial_schema.sql  20241208000001_initial_schema.sql
crates/icn-storage/src/: backup.rs  cache.rs  error.rs  lib.rs  metrics.rs  mod.rs  storage.rs  tests.rs
crates/icn-types/: Cargo.toml
crates/icn-types/src/: block.rs  did.rs  error.rs  errors.rs  identity.rs  lib.rs  relationship.rs  reputation.rs  transaction.rs
crates/icn-types/tests/: block_validation_tests.rs
crates/icn-zk/: Cargo.toml
crates/icn-zk/src/: lib.rs
crates/networking/: Cargo.toml
crates/networking/src/: lib.rs  nat.rs  sdp.rs
frontend/: .dockerignore  Cargo.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/.next/: trace
frontend/.next/cache/: config.json
frontend/pages/: index.tsx
frontend/public/: index.html
frontend/src/: App.tsx  index.tsx  main.tsx
frontend/src/components/: Layout.tsx  LoadingSpinner.tsx
frontend/src/hooks/: useNodes.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Home.tsx  NotFound.tsx
frontend/src/styles/: LoadingSpinner.css  index.css
icn-blockchain/backend/: Cargo.toml
(+390 files in other folders)
