[workspace]
members = [
    "backend",
    "crates/icn-types",
    "crates/icn-common",
    "crates/icn-core",
    "crates/icn-p2p",
    "crates/icn-crypto",
    "crates/icn-identity",
    "crates/icn-governance",
    "crates/icn-federation",
    "crates/icn-reputation",
    "crates/icn-resource",
    "crates/icn-consensus",
    "crates/icn-storage",
    "crates/icn-runtime",
    "crates/icn-mutual-credit",
    "crates/icn-zk",
    "crates/zk_snarks",
    "crates/icn-cli",
    "icn-server"
]

[workspace.dependencies]
# Internal crates
icn-types = { path = "crates/icn-types" }
icn-common = { path = "crates/icn-common" }
icn-core = { path = "crates/icn-core" }
icn-p2p = { path = "crates/icn-p2p" }
icn-crypto = { path = "crates/icn-crypto" }
icn-identity = { path = "crates/icn-identity" }
icn-governance = { path = "crates/icn-governance" }
icn-federation = { path = "crates/icn-federation" }
icn-reputation = { path = "crates/icn-reputation" }
icn-resource = { path = "crates/icn-resource" }
icn-consensus = { path = "crates/icn-consensus" }
icn-storage = { path = "crates/icn-storage" }
icn-runtime = { path = "crates/icn-runtime" }
icn-mutual-credit = { path = "crates/icn-mutual-credit" }
icn-zk = { path = "crates/icn-zk" }
zk_snarks = { path = "crates/zk_snarks" }

# External dependencies
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
thiserror = "1.0"
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1"
futures = "0.3.31"
tracing = "0.1.41"
log = "0.4"
env_logger = "0.9"
sha2 = "0.10.8"
rayon = "1.10.0"
lazy_static = "1.5.0"
x25519-dalek = "2.0.1"
libsqlite3-sys = "0.30.1"
reqwest = { version = "0.11", features = ["json"] }
clap = { version = "4.5.1", features = ["derive"] }
rand = "0.8"
uuid = { version = "1.3", features = ["v4"] }
bls12_381 = "0.8"
md-5 = "0.10"
digest = "0.10"
hex = "0.4"

[package]
name = "icn"
version = "0.1.0"
description = "Inter-Cooperative Network - A platform for cooperative resource sharing and governance"
edition = "2021"

[features]
default = ["basic", "federation"]
basic = []
federation = ["dep:tokio", "dep:async-trait"]
advanced-governance = ["dep:parity-scale-codec"]
monitoring = ["dep:prometheus"]

[dependencies]
icn-types = { workspace = true }
tokio = { workspace = true, optional = true }
warp = { workspace = true }
async-trait = { workspace = true, optional = true }
parity-scale-codec = { version = "3.7.4", optional = true }
prometheus = { version = "0.13.4", optional = true }
serde = { workspace = true }
icn-core = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
pest = "2.7.15"
pest_derive = "2.7.15"
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
tokio-tungstenite = "0.26.2"
icn-p2p = { path = "crates/icn-p2p" }
reqwest = { workspace = true, features = ["json"] }
clap = { workspace = true, features = ["derive"] }
rand = { workspace = true }
uuid = { workspace = true }
bls12_381 = { workspace = true }
md-5 = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }

[lib]
name = "icn_lib"
path = "src/lib.rs"

[[bin]]
name = "icn_bin"
path = "src/main.rs"

[[example]]
name = "sdp_federation_example"
path = "examples/sdp_federation_example.rs"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
