[package]
name = "icn-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "icn-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"

# Core internal dependencies
icn-types = { path = "../crates/icn-types" }
icn-common = { path = "../crates/icn-common" }
