[package]
name = "icn-backend"
version = "0.1.0"
edition = "2021"
description = "Backend server for Inter-Cooperative Network"

[[bin]]
name = "icn-server"
path = "src/main.rs"

[dependencies]
# Core
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
async-trait = "0.1.68"

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1.0", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "time"] }

# Authentication
jsonwebtoken = "9.2.0"
bcrypt = "0.15.0"
time = { version = "0.3", features = ["serde"] }

# Tracing and Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
log = "0.4"
env_logger = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
dotenv = "0.15.0"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
tokio-test = "0.4"
async-trait = "0.1"
futures = "0.3"

[[test]]
name = "federation_manager_tests"
path = "tests/federation_manager_tests.rs"

[[test]]
name = "federation_sdp_tests"
path = "tests/federation_sdp_tests.rs"
