[package]
name = "icn-common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
log = "0.4"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }
bit-set = "0.5"
trie-rs = "0.1"
rand = "0.8"
icn-types = { path = "../icn-types" }

[workspace]
members = [
    "crates/icn-core",
    "crates/icn-consensus",
    "crates/icn-common",
    "backend",
]
