[package]
name = "icn-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.3", features = ["v4"] }
async-trait = "0.1"
futures = "0.3"
bls12_381 = "0.8"
md-5 = "0.10"
digest = "0.10"
hex = "0.4"

# Internal dependencies
icn-types = { path = "../icn-types" }
icn-common = { path = "../icn-common" }
icn-crypto = { path = "../icn-crypto" }
icn-p2p = { path = "../icn-p2p" }
icn-federation = { path = "../icn-federation" }
icn-zk = { path = "../icn-zk" }

[dev-dependencies]
tokio-test = "0.4"
