[package]
name = "icn-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
log = "0.4"
thiserror = "1.0"
bit-set = "0.5"
patricia-trie = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bellman = "0.14"
bls12_381 = "0.8"
secp256k1 = { version = "0.28", features = ["rand"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
uuid = { version = "1.3", features = ["v4"] }
futures = "0.3"
md-5 = "0.10"
digest = "0.10"
hex = "0.4"

# Internal dependencies
icn-types = { path = "../icn-types" }
icn-common = { path = "../icn-common" }
icn-crypto = { path = "../icn-crypto" }
icn-federation = { path = "../icn-federation" }
icn-zk = { path = "../icn-zk" }

[dev-dependencies]
tokio-test = "0.4"
