[package]
name = "icn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
icn-types = { workspace = true }
bincode = "1.3"
futures = { workspace = true }
tokio-stream = "0.1"

[dev-dependencies]
tokio-test = "0.4"
