[package]
name = "icn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
icn-types = { workspace = true }
bincode = "1.3"
futures = { workspace = true }
tokio-stream = "0.1"
icn-consensus = { path = "../icn-consensus", optional = true }
icn-dsl = { path = "../icn-dsl", optional = true }
zk-snarks = { version = "0.1", optional = true }

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["consensus", "dsl"]
consensus = ["dep:icn-consensus"]
dsl = ["dep:icn-dsl"]
zk = ["dep:zk-snarks"]
