[package]
name = "icn-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
icn-types = { workspace = true }
icn-common = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
