[package]
name = "icn-crypto"
version = "0.1.0"
edition = "2021"
description = "Cryptographic operations for the Internet of Cooperative Networks (ICN)"
authors = ["ICN Team"]
license = "MIT"

[dependencies]
# Cryptographic dependencies
secp256k1 = "0.28.0"
sha2 = "0.10.8"
rsa = "0.9.3"
ecdsa = { version = "0.16.9", features = ["signing"] }
rand = "0.8.5"
p256 = "0.13.2"
signature = "2.1.0"

# Internal crates
icn-types = { path = "../icn-types" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }

# For testing
[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

# Post-quantum crypto stubs (commented out for now)
# Add actual implementations when available
