[package]
name = "icn-federation"
version = "0.1.0"
edition = "2018"

[dependencies]
tokio = { version = "1.30", features = ["full"] }
tendermint = "0.23"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
icn-types = { workspace = true }
icn-governance = { path = "../icn-governance" }
icn-zkp = { path = "../icn-zk" }
icn-networking = { path = "../networking" }
