[package]
name = "icn-federation"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
icn-types = { path = "../icn-types" }
icn-governance = { path = "../icn-governance" }
icn-zk = { path = "../icn-zk" }
