[package]
name = "icn-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
log = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
