[package]
name = "icn-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
icn-types = { workspace = true }
icn-common = { workspace = true }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
x25519-dalek = "2.0.0"
rand = "0.8"
