[package]
name = "icn-p2p"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"
async-trait = "0.1"
futures = "0.3"
rand = "0.8"
x25519-dalek = "2.0"
tokio-tungstenite = "0.21"
uuid = { version = "1.3", features = ["v4"] }
thiserror = "1.0"

# Internal dependencies
icn-types = { path = "../icn-types" }
icn-common = { path = "../icn-common" }
icn-crypto = { path = "../icn-crypto" }
