[package]
name = "icn-runtime"
version = "0.1.0"
edition = "2021"
description = "Runtime implementation for the Inter-Cooperative Network"

[dependencies]
icn-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tracing-test = "0.2"
