[package]
name = "icn-storage"
version = "0.1.0"
edition = "2021"
description = "Storage implementation for the Inter-Cooperative Network"

[dependencies]
icn-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
async-trait = "0.1"
ipfs-api-backend-actix = "0.6"
futures = "0.3"
serde_json = "1.0"
bincode = "1.3"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile = "3.8"
