[package]
name = "icn-types"
version = "0.1.0"
edition = "2021"
description = "Core types for the Inter-Cooperative Network (ICN) system"
license = "MIT"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
rayon = { workspace = true }
sha2 = { workspace = true }
lazy_static = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
bincode = "1.3"
log = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
default = []
testing = []
database = ["dep:sqlx"]
