[package]
name = "icn-types"
version = "0.1.0"
edition = "2021"
description = "Core types for the Inter-Cooperative Network (ICN) system"
license = "MIT"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
default = []
testing = []
database = ["dep:sqlx"]
