[package]
name = "icn-types"
version = "0.1.0"
edition = "2021"
description = "Core types for the Inter-Cooperative Network (ICN) system"
license = "MIT"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true, optional = true }
sha2 = "0.10.7"
chrono = { version = "0.4", features = ["serde"] }
tokio = { workspace = true, features = ["full"] }
lazy_static = "1.4"
log = "0.4"
bincode = "1.3"
serde_json = "1.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }

[features]
default = []
testing = []
database = ["dep:sqlx"]
