[package]
name = "icn-zk"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
bellman = "0.9"
rand = "0.8"
ff = "0.9"
group = "0.9"
pairing = "0.20"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres"] }
