[package]
name = "icn-networking"
version = "0.1.0"
edition = "2021"
description = "Networking module for the Internet of Cooperative Networks (ICN)"
authors = ["ICN Team"]
license = "MIT"

[dependencies]
# Networking dependencies
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
futures = "0.3.30"
bytes = "1.5.0"
socket2 = "0.5.5"
quinn = "0.10.2"
rustls = { version = "0.21.10", features = ["dangerous_configuration"] }
webpki = "0.22.4"
rcgen = "0.12.1"
thiserror = "1.0.69"

# Internal crates
icn-types = { path = "../icn-types" }
icn-crypto = { path = "../icn-crypto" }

# Workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tokio-test = "0.4.3"
