[package]
name = "icn-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
secp256k1 = "0.20"
sha2 = "0.10"  # Add sha2 for hashing
digest = "0.10"  # Add digest for trait compatibility
chrono = "0.4"  # For timestamp management
